chore: add vault config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8080
 
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/vault?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=mariadbpw
+
+
+spring.main.allow-bean-definition-overriding=true
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.example.demo=DEBUG
+
+# output to a file
+logging.file=app.log
