chore: create and retrieve secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.main.allow-bean-definition-overriding=true
 
 # logging level
 logging.level.org.springframework=ERROR
-logging.level.com.example.demo=DEBUG
+logging.level.amin.vaultspringboot=DEBUG
 
 # output to a file
 logging.file=app.log
